<resources>
    <string name="app_name">PhonebookReddec</string>
    <string name="action_settings">Settings</string>

    <string name="name">First name</string>
    <string name="surname">Last name</string>
    <string name="phone">Phone</string>
    <string name="number1">Phone number 1</string>
    <string name="number2">Phone number 2</string>
    <string name="number3">Phone number 3</string>
    <string name="action_save">Save</string>
    <string name="msg_error_occurred">There is the error occurs.</string>
    <string name="saved">Contact has been saved successfully.</string>
    <string name="add_contact">Add new contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="check_input_name">Please input the contact name</string>
    <string name="check_input_number">Please input at least one phone number</string>
    <string name="check_syntax_number">Please check the syntax of phone number</string>


</resources>
