<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:padding="5dp"
        android:text="@string/add_contact"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:minWidth="350dp"
        android:padding="0dp">

        <TableRow>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:padding="5dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:minWidth="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:lines="1"
                android:singleLine="true"
                android:padding="0dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_surname"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:padding="5dp"
                android:text="@string/surname"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:minWidth="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:lines="1"
                android:singleLine="true"
                android:padding="0dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_phone1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:padding="5dp"
                android:text="@string/number1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_phone1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:minWidth="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:lines="1"
                android:singleLine="true"
                android:padding="0dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_phone2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:padding="5dp"
                android:text="@string/number2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_phone2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:minWidth="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:lines="1"
                android:singleLine="true"
                android:padding="0dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_phone3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_margin="0dp"
                android:padding="5dp"
                android:text="@string/number3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_phone3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:minWidth="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:lines="1"
                android:singleLine="true"
                android:padding="0dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/action_save"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:padding="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>